Fix align issue for plagal

--- a/src/ckeditor-plugins/insertneume/insertneume.css
+++ b/src/ckeditor-plugins/insertneume/insertneume.css
@@ -88,4 +88,5 @@
   display: inline-flex;
   flex-direction: column;
   vertical-align: middle;
+  align-items: center;
 }
